--- a/css/blue.css
+++ b/css/blue.css
@@ -2,7 +2,7 @@ body {
   font: 100% "Space Mono", monospace;
   color: #2748B3;
   margin: 0px;
-  padding: 0px;
+  padding: 8px;
   background-color: #000;
   background-image: radial-gradient(#fff, rgba(255, 255, 255, 0.2) 2px, transparent 40px), radial-gradient(#fff, rgba(255, 255, 255, 0.15) 1px, transparent 30px), radial-gradient(#fff, rgba(255, 255, 255, 0.1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.1) 2px, transparent 30px);
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
@@ -19,7 +19,7 @@ article section {
   -webkit-box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
   -moz-box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
   box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
-  padding: 16px;
+  padding: 8px;
   margin: 16px;
   clear: both;
   overflow: auto; }
@@ -39,7 +39,7 @@ article code {
   margin-bottom: 1.6em;
   max-width: 100%;
   overflow: auto;
-  padding: 1em 1.5em;
+  padding: 8px;
   display: block;
   word-wrap: break-word; }
 
@@ -54,7 +54,7 @@ article code.after {
 h1,
 h2,
 h6 {
-  color: #6B8EFF; }
+  color: darkblue; }
 
 h1 {
   text-align: center; }
@@ -62,7 +62,7 @@ h1 {
 h6 {
   text-align: center;
   font-size: 2em;
-  padding: 32px;
+  padding: 16px;
   margin-bottom: 0px; }
 
 .message,
@@ -70,7 +70,7 @@ h6 {
 .error,
 .warning {
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 8px;
   color: #2748B3;
   background-color: #000;
   width: 100%; }
