--- a/css/red.css
+++ b/css/red.css
@@ -1,8 +1,8 @@
 body {
   font: 100% "Space Mono", monospace;
-  color: #2748B3;
+  color: red;
   margin: 0px;
-  padding: 0px;
+  padding: 16px;
   background-color: #000;
   background-image: radial-gradient(#fff, rgba(255, 255, 255, 0.2) 2px, transparent 40px), radial-gradient(#fff, rgba(255, 255, 255, 0.15) 1px, transparent 30px), radial-gradient(#fff, rgba(255, 255, 255, 0.1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.1) 2px, transparent 30px);
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
@@ -39,7 +39,7 @@ article code {
   margin-bottom: 1.6em;
   max-width: 100%;
   overflow: auto;
-  padding: 1em 1.5em;
+  padding: 16px;
   display: block;
   word-wrap: break-word; }
 
@@ -54,7 +54,7 @@ article code.after {
 h1,
 h2,
 h6 {
-  color: #6B8EFF; }
+  color: darkred; }
 
 h1 {
   text-align: center; }
@@ -70,8 +70,8 @@ h6 {
 .error,
 .warning {
   border: 1px solid #ccc;
-  padding: 10px;
-  color: #2748B3;
+  padding: 16px;
+  color: red;
   background-color: #000;
   width: 100%; }
 
