--- a/scss/_copyBase.scss
+++ b/scss/_copyBase.scss
@@ -1,8 +1,8 @@
 body {
   font: 100% "Space Mono", monospace;
-  color: #2748B3;
+  color: $textcolor;
   margin: 0px;
-  padding: 0px;
+  padding: $padding;
   background-color: #000;
   background-image: radial-gradient(#fff, rgba(255, 255, 255, 0.2) 2px, transparent 40px), radial-gradient(#fff, rgba(255, 255, 255, 0.15) 1px, transparent 30px), radial-gradient(#fff, rgba(255, 255, 255, 0.1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.1) 2px, transparent 30px);
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
@@ -21,7 +21,7 @@ article section {
   -webkit-box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
   -moz-box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
   box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
-  padding: 16px;
+  padding: $padding;
   margin: 16px;
   clear: both;
   overflow: auto
@@ -43,7 +43,7 @@ article code {
   margin-bottom: 1.6em;
   max-width: 100%;
   overflow: auto;
-  padding: 1em 1.5em;
+  padding: $padding;
   display: block;
   word-wrap: break-word
 }
@@ -61,7 +61,7 @@ article code.after {
 h1,
 h2,
 h6 {
-  color: #6B8EFF
+  color: $hcolor;
 }
 
 h1 {
@@ -71,7 +71,7 @@ h1 {
 h6 {
   text-align: center;
   font-size: 2em;
-  padding: 32px;
+  padding: $padding*2;
   margin-bottom: 0px
 }
 
@@ -80,8 +80,8 @@ h6 {
 .error,
 .warning {
   border: 1px solid #ccc;
-  padding: 10px;
-  color: #2748B3;
+  padding: $padding;
+  color: $textcolor;
   background-color: #000;
   width: 100%
 }
